--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
 <resources>
     <string name="app_name">NdroidStatusBar</string>
+    <string name="wifi">Wifi</string>
+    <string name="mobile_data">Mobile Data</string>
+    <string name="ringtone">Ringtone</string>
+    <string name="bluetooth">Bluetooth</string>
+    <string name="screen_rotation">Screen Rotation</string>
+    <string name="location">Location</string>
+    <string name="nfc">NFC</string>
+    <string name="airplane">Airplane</string>
+    <string name="brightness">Brightness</string>
+    <string name="carrier">Orange</string>
+
 </resources>
